# TheGaffer-MPC

./: .gitignore  README.md  env.example  main.py  pyproject.toml
thegaffer/: __init__.py
thegaffer/agents/: __init__.py  formation_expert.py  match_analyzer.py  tactical_advisor.py
thegaffer/core/: __init__.py  agent.py  config.py
thegaffer/tools/: __init__.py  retriever.py  summarizer.py
